file upload error fix

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://masoomyadav0901:aIQKIiYJnK1qFtZz@cluster0.kd6clu6.mongodb.net/bulkdata?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://masoomyadav0901:s7P2h1GvtSGNSDsM@cluster0.dljdtzt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 REDIS_URL=redis://127.0.0.1:6379
